prototypes/p3a/tests/invalid/12_effect_not_handled.hll
// MUST BE REJECTED: effect not handled by caller

effect InvalidEmail { String input }

function parseEmail(String input) -> Email
    effects { InvalidEmail } {
    raise InvalidEmail(input)
}

function main() {
    let email = parseEmail("bad")  // ERROR: InvalidEmail effect not handled
    printLn(email)
}
